--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <body>
        <header>
             <h1><i class="fa-solid fa-tornado"></i>TornadoCMS</h1>
+            <nav>
+                <a href="">logout</a>
+             </nav> 
        </header> 
         {% block content %}{% end %}
     </body>
