--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <div id="dashboard-content">
+  <h1>Dashboard</h1> 
     <div id="dashboard-header"> 
     <div class="filter">
         <form method="post">
