--- a/templates/project.html
+++ b/templates/project.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div id="project-container">
+  <h1>Add Project</h1>  
    <form method="post" action="/manage/project">
       <input type="text" name="projectname" placeholder=" Project Name" required><br>
       <select name="database">
