--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -95,9 +94,6 @@ p {
     margin-top: 25px;
 }
 
-
-
-
 #projects {
   width: 100%;
 }
@@ -110,7 +106,6 @@ p {
     padding-bottom: 20px;
     border-bottom: 1px solid rgba(168, 168, 168, 0.2); 
 }
-
 
 .project-row {
     color: #f5f2f2;
@@ -166,7 +161,7 @@ p {
   margin: 0 auto 75px 0;
 }
 
-#project-link {
+.add-link {
     padding: 10px 50px;
     cursor: pointer;
     text-decoration: none; 
@@ -183,6 +178,14 @@ p {
     font: 200 1em Supria Sans, sans-serif;
 }
 
+.add-link.server {
+    width: 91%;
+    background:  rgb(116, 224, 214);
+    color:  rgb(26, 26, 26);
+    font-weight: 400;
+}
+
+
 .filter form select {
     float: right;
     background: none;
@@ -195,17 +198,12 @@ p {
     font: 200 1em Supria Sans, sans-serif;
 }
 
-#project-container, #server-container {
+#project-container, #server-container, #production-container  {
     margin: 175px auto 0 auto;
     width: 75%;
 }
 
-
-
-
-
-
-#project-container form select {
+#project-container form select, #production-container form select {
     float: right;
     background: none;
     border: 1px solid rgba(168, 168, 168, 0.2); 
@@ -242,7 +240,7 @@ p {
     margin: 25px 0;
 }
 
-#project-container input[type='submit'], #server-container input[type='submit']  {
+#project-container input[type='submit'], #server-container input[type='submit'], #production-container input[type='submit']  {
     border: 1px solid rgb(116, 224, 214);
     background: none;
     color:  rgb(116, 224, 214);
