--- a/templates/server.html
+++ b/templates/server.html
@@ -4,8 +4,12 @@
    <h1>Add Server</h1>
    <form method="post" action="/manage/server">
       <input type="url" name="webaddress" placeholder=" IP Address or Domain" required>
+      <input type="text" name="webhosting" placeholder=" Web Hosting" required>
       <input type="text" name="username" placeholder=" Username" required>
       <input type="password" name="password" placeholder=" Password" required>
+      <input type="text" name="dbhosting" placeholder=" Database Hosting" required>
+      <input type="text" name="dbusername" placeholder=" Database Username" required>
+      <input type="password" name="dbpassword" placeholder=" Database Password" required>
       <input type="submit" value="Add Server">
    </form>
 </div>
