--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="https://use.typekit.net/jmb2yal.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="{{ static_url('css/app.css') }}">
+        <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/1.8.5/htmx.min.js" integrity="sha512-B5IkMjoTFeR6sB/Mbd6eNnF0pwvfG5ZgSGdH4pL2uWnadND4pWTFXxXi3TBBKCZWGaWx83AujfrzFQuqfau11Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="{{ static_url('js/app.js') }}"></script>
     </head>
     <body>
