--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,8 +5,10 @@
     <div id="dashboard-header"> 
     <div class="filter">
         <form method="post">
-           <select name="">
+           <select name="dropdown-filter" id="dropdown-filter" hx-get="/sort_results" hx-target=".project-container">
               <option value="filter" selected>Filter by:</option>
+              <option value="projectname"> Project Name</option>
+              <option value="status"> Status</option>
               <option value="date"> Date</option>
               <option value="tech_stack">Tech Stack</option>
            </select>
@@ -14,6 +16,7 @@
     </div> 
     </div>
     <div id="projects">
+      {% if projects %}
         {% for project in projects %}
         <div class="project-container">
             {% if project['status'] == 'development' %}
@@ -25,10 +28,17 @@
            <div class="project-row"><span>Date Added:</span>  {{ project['date'] }}</div>
            <div class="project-row"><span>Status: </span>{{ project['status'] }}</div> 
            <div class="project-row">{{ project['tech_stack'] }}</div> 
-           <div class="project-row"><a href="">View project</a></div>
+           <div class="project-row"><a href="/manage/project/{{ project['_id'] }}" id="remove">remove</a></div>
            <div class="project-row"><a href="/manage/production">Mark as completed</a></div> 
         </div>
         {% end %}
+      {% else %}
+         <div class="project-container">
+             <h1>No projects :(</h1>
+             <p>Looks like you don&apos;t have any projects added. Click the link below to get started</p>
+             <a href="/manage/project" class="add-link">Add Project</a>
+         </div>
+      {% end %}
         <a href="/manage/project" class="add-link">Add Project</a>
     </div>
 </div>
