--- a/templates/project.html
+++ b/templates/project.html
@@ -4,7 +4,7 @@
   <h1>Add Project</h1>  
    <form method="post" action="/manage/project">
       <input type="text" name="projectname" placeholder=" Project Name" required><br>
-      <select name="database">
+      <select name="database_name">
         <option value="database" selected>Database:</option>
         <option value="mysql">MySQL</option>
         <option value="mongodb">MongoDB</option>
@@ -18,7 +18,7 @@
       <input type="text" name="columnname" placeholder=" Column Name" required><br>
       <input type="text" name="columnname2" placeholder=" Column Name" required><br>
       <input type="text" name="columnname3" placeholder=" Column Name" required><br>
-      <input type="button" value="Add Column"><br>
+      <input type="button" value="Add Column" id="add-column"><br>
       <select name="tech_stack">
          <option value="tech" selected>Web Framework:</option>
          <option value="flask">Flask</option>
@@ -30,7 +30,7 @@
          <option value="php">PHP</option>
       </select><br>
       <textarea name="description" placeholder=" Description"></textarea><br>
-      <input type="submit" value="Add Project">
+      <input type="submit" value="Add Project" id="dashboard-add-project">
    </form>
 </div>
 {% end %}
