--- a/templates/server.html
+++ b/templates/server.html
@@ -7,9 +7,9 @@
       <input type="text" name="webhosting" placeholder=" Web Hosting" required>
       <input type="text" name="username" placeholder=" Username" required>
       <input type="password" name="password" placeholder=" Password" required>
-      <input type="text" name="dbhosting" placeholder=" Database Hosting" required>
-      <input type="text" name="dbusername" placeholder=" Database Username" required>
-      <input type="password" name="dbpassword" placeholder=" Database Password" required>
+      <input type="text" name="dbhosting" placeholder=" Database Hosting">
+      <input type="text" name="dbusername" placeholder=" Database Username">
+      <input type="password" name="dbpassword" placeholder=" Database Password">
       <input type="submit" value="Add Server">
    </form>
 </div>
